Add Operation Grouping
