# aspnetcore/tutorials/web-api-help-pages-using-swagger/samples/3.0/TodoApi.Swashbuckle/Controllers/v1/MoviesWatchedController.cs
@@ -18,6 +18,7 @@ namespace MoviesWatched.Controllers.v1
     public class MoviesWatchedController : ControllerBase
     {
         protected readonly MovieContext _context;
+        protected const string controllerName = "MoviesWatched";
     #endregion
 
         public MoviesWatchedController(MovieContext context)
@@ -42,7 +43,8 @@ namespace MoviesWatched.Controllers.v1
         [SwaggerOperation(
             Summary = "Gets all watched movies.",
             Description = "Fetch all movies watched during COVID-19 shelter-in-place.",
-            OperationId = nameof(GetAllMovies)
+            OperationId = controllerName + "_" + nameof(GetAllMovies),
+            Tags = new string[] {controllerName}
         )]
         [SwaggerResponse(StatusCodes.Status200OK, "Movies have been fetched", Type = typeof(IEnumerable<Movie>))]
         public async virtual Task<ActionResult<IEnumerable<Movie>>> GetAllMovies()
@@ -57,7 +59,8 @@ namespace MoviesWatched.Controllers.v1
         [SwaggerOperation(
             Summary = "Gets a specific movie by its ID.",
             Description = "Fetch a movie watched during COVID-19 shelter-in-place.",
-            OperationId = nameof(GetMovieById)
+            OperationId = controllerName + "_" + nameof(GetMovieById),
+            Tags = new string[] { controllerName }
         )]
         [SwaggerResponse(StatusCodes.Status200OK, "The movie was found.", Type = typeof(Movie))]
         public async virtual Task<ActionResult<Movie>> GetMovieById([FromRoute, SwaggerParameter("Movie Id", Required = true)] long id)
@@ -78,7 +81,8 @@ namespace MoviesWatched.Controllers.v1
         [SwaggerOperation(
             Summary = "Creates a Movie.",
             Description = "Record a movie watched during COVID-19 shelter-in-place.",
-            OperationId = nameof(CreateMovie)
+            OperationId = controllerName + "_" + nameof(CreateMovie),
+            Tags = new string[] { controllerName }
         )]
         [SwaggerResponse(StatusCodes.Status201Created, "The movie was created.", Type = typeof(Movie))]
         public async virtual Task<ActionResult<Movie>> CreateMovie(
@@ -105,7 +109,8 @@ namespace MoviesWatched.Controllers.v1
         [SwaggerOperation(
             Summary = "Updates an existing Movie.",
             Description = "Changes the information for a watched movie.",
-            OperationId = nameof(UpdateMovieById)
+            OperationId = controllerName + "_" + nameof(UpdateMovieById),
+            Tags = new string[] { controllerName }
         )]
         [SwaggerResponse(StatusCodes.Status204NoContent, "The movie was updated.")]
         public async virtual Task<IActionResult> UpdateMovieById(
@@ -141,7 +146,8 @@ namespace MoviesWatched.Controllers.v1
         [SwaggerOperation(
             Summary = "Deletes a specific Movie.",
             Description = "Removes a watched movie.",
-            OperationId = nameof(DeleteMovieById)
+            OperationId = controllerName + "_" + nameof(DeleteMovieById),
+            Tags = new string[] { controllerName }
         )]
         [SwaggerResponse(StatusCodes.Status204NoContent, "The movie was deleted.")]
         public async virtual Task<IActionResult> DeleteMovieById([FromRoute, SwaggerParameter("Movie ID", Required = true)] long id)
